<package format="2">
  <name>curly_state_estimator</name>
  <version>1.0.0</version>
  <description>CURLY State Estimator ROS2 Wrapper</description>
  <author>Wenzhe Tong, Justin Yu, Justin Lin, Tingjun Li</author>
  <license>GPLv3</license>
  <depend package="rclcpp"/>
  <depend package="std_msgs"/>
  <depend package="message_filters"/>
  <depend package="geometry_msgs"/>
  <!-- <depend package="message_generation"/> -->
  <depend package="trajectory_msgs"/>
  <depend package="tf"/>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>